# gerbolyze

./: .gitignore  .gitlab-ci.yml  .gitmodules  MANIFEST.in  Makefile  README.md  README.rst  TODO  Untitled_17-11-19_18-00-15.ipynb  export_previews.py  export_protoboards.py  generate_protoboards.py  generate_scaled_footprints.py  gerbimg.py  gerbolyze  gerbolyze.py  gerboweb.service  led_drv.GTP  post.html  pyproject.toml  pytest.ini  run-tests.sh  setup.py  tox.ini
gerbolyze/: __init__.py  __main__.py  cli.py  command_line.py  gerbolyze.py  protoboard.py  util.py
gerbolyze/tests/: test_integration.py
gerboweb/: Containerfile  Containerfile.develop  develop-startup.sh  gerboweb-develop.cfg  gerboweb.cfg  gerboweb.py  gerboweb_prod.cfg  job_processor.py  job_queue.py  run-develop.sh  uwsgi-gerboweb.ini
gerboweb/ansible/: gerboweb-job-processor.service.j2  gerboweb.cfg.j2  gerboweb.yml  render.sh.j2  tmpfiles-gerboweb.conf.j2  uwsgi-gerboweb.ini  vector.sh.j2
gerboweb/deploy/: .gitignore  README.rst  bootstrap_arch_container.yml  cgitrc  clippy-nspawn.service  clippy.nspawn  clippy.service.j2  credentials.ini.example  dns.yml  dyndns.py  dyndns_config.py.j2  gerboweb-job-processor.service  gerboweb.cfg.j2  gitolite.rc  inventory.yml  iptables.rules  mirrorlist  nginx.conf  nginx_nossl.conf  notification_proxy.py  notification_proxy_config.py.j2  nsd.conf  playbook.yml  pogojig-job-processor.service.j2  pogojig.cfg.j2  pogojig_flask_secret.txt  pogojig_generate.sh.j2  render.sh  render.sh.j2  secure_download.cfg.j2  setup_clippy.yml  setup_containers.yml  setup_dyndns.yml  setup_gerboweb.yml  setup_git.yml  setup_notification_proxy.yml  setup_openjscad.yml  setup_pogojig.yml  setup_secure_download.yml  setup_tracespace.yml  (+14 more)
gerboweb/static/: style.css
gerboweb/templates/: index.html
include/: gerbolyze.hpp
podman/: arch-testenv  debian-testenv  fedora-testenv  ubuntu-testenv
podman/testdata/: testscript.sh
src/: main.cpp  out_dilater.cpp  out_flattener.cpp  out_gerber.cpp  out_sexp.cpp  out_svg.cpp  svg_color.cpp  svg_color.h  svg_doc.cpp  svg_doc.h  svg_geom.cpp  svg_geom.h  svg_import_util.cpp  svg_import_util.h  svg_path.cpp  svg_path.h  svg_pattern.cpp  svg_pattern.h  vec_core.cpp  vec_core.h  vec_grid.cpp  vec_grid.h
src/gerbolyze/: __init__.py
svg-flatten/: .gitignore  Makefile  geom_test.py  pyproject.toml  setup.py  svg-flatten-wasi-ci.yml
svg-flatten/include/: flatten.hpp  geom2d.hpp  gerbolyze.hpp  iir_gauss_blur.h
svg-flatten/src/: flatten.cpp  lambda_sink.cpp  main.cpp  nopencv.cpp  nopencv.hpp  nopencv_test.cpp  out_dilater.cpp  out_flattener.cpp  out_gdsii.cpp  out_gerber.cpp  out_scaler.cpp  out_sexp.cpp  out_svg.cpp  proto-gen.py  svg_color.cpp  svg_color.h  svg_doc.cpp  svg_geom.cpp  svg_geom.h  svg_import_defs.h  svg_import_util.cpp  svg_import_util.h  svg_path.cpp  svg_path.h  svg_pattern.cpp  svg_pattern.h  util.cpp  util.h  vec_core.cpp  vec_core.h  vec_grid.cpp  vec_grid.h  wasi_exception_workaround.cpp
svg-flatten/src/test/: nopencv_test.cpp  svg_tests.py
svg-flatten/svg_flatten_wasi/: __init__.py
testdata/: chibi_2024-Edge.Cuts.gbr  chibi_2024-F.SilkS.gbr  led_drv.GKO  led_drv.GTO  led_drv.TXT
tests/: conftest.py  test_integration.py  test_regression.py
tests/resources/layers-gerber/: layers-B.Cu.gbr  layers-B.Paste.gbr  layers-B.SilkS.gbr  layers-F.Paste.gbr  (+1 more)
(+86 files in other folders)
